Fixed Aura to render to page size and not window size Added placeholder projects design Added test anchor to jump to projects Started comments for readability

--- a/styles.css
+++ b/styles.css
@@ -4,15 +4,14 @@
   color: #ffffff;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .background-aura {
   height: 100%;
   width: 100%;
-  background-color: #000000ea;
-}
-
-.b {
-  border: 1px solid #ffffff1a;
-  color: #ffffff;
+  background-color: #000000e3;
 }
 
 body {
@@ -24,7 +23,8 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
   padding-top: 40px;
   color: #ffffff;
   background-color: rgba(41, 41, 41, 0.068);
@@ -97,7 +97,11 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 50%;
+}
+
+.details p {
+  border: 1px solid red;
+  height: 500px;
 }
 
 .cursor {
@@ -139,4 +143,28 @@ body {
   filter: drop-shadow(0px 2px 10px rgba(255, 255, 255, 0.9));
   fill: #ffffff;
   color: #ffffff;
+}
+
+/* Project Section */
+
+.projects {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid red;
+  margin: 25px 0px 25px;
+}
+
+.projects img {
+  width: 50%;
+  height: 100%;
+}
+
+.project-description {
+  text-align: left;
+  margin-left: 25px;
+}
+
+.invert {
+  flex-direction: row-reverse;
 }
